Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <img src="/images/Sharon.svg" width="150px">
   </header>
 
+  <div class="sakura">
+  </div>
+
   <header class="splash">
-    <figure class="sakura">
-    </figure>
-    <figure class="hello-position">
+    <div class="hello-position">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="400.025px" height="100.006px" viewBox="0 0 400.025 100.006" enable-background="new 0 0 400.025 100.006"
          xml:space="preserve">
@@ -36,7 +37,7 @@
         c9.944,3.408,16.545-9.553,18.024-15.377c3.228-12.699-11.31-18.532-17.784-9.505c-9.499,13.244,5.612,13.892,13.651,11.22
         c11.151-3.707,23.771-15.593,23.331-28.23"/>
       </svg>
-    </figure>
+    </div>
   </header>
 
   <nav class="menu">
@@ -58,7 +59,6 @@
   </div>
 
   <section class="hello" id="hello">
-    <h1>Hello.</h1>
     <p>Here is a little bit about me:</p>
     <p>Current Form: Developer</p>
     <p>Past Iterations: Pharmacist, Calligrapher<p>
