update to html and css

--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 
   <body>
 
-  <header class ="name">
-    <img src="/images/Sharon.svg" width="150px">
-  </header>
-
   <div class="sakura">
   </div>
 
@@ -47,31 +43,35 @@
     <a href="#projects" class="menu-link">
       <span class="text">Projects</span>
     </a>
-    <a href="#musings" class="menu-link">
-      <span class="text">Musings</span>
+    <a href="#thoughts" class="menu-link">
+      <span class="text">Thoughts</span>
     </a>
     <a href="#contact" class="menu-link">
       <span class="text">Contact</span>
     </a>
   </nav>
-
+  <a name="hello"></a>
   <div class="parallax1">
   </div>
 
-  <section class="hello" id="hello">
-    <p>Here is a little bit about me:</p>
-    <p>Current Form: Developer</p>
-    <p>Past Iterations: Pharmacist, Calligrapher<p>
-    <p>Loves: picnics, planning holiday itineraries, learning instruments and languages and board game nights</p>
-    <p>I am also going through a pink phase.
-    Don’t judge me.</p>
-    <img src="/images/headshot.jpg" width="200px">
-    <p class="figure-text">Fig 1. A wild Sharon in her natural habitat</p>
+  <section class="hello">
+    <article>
+      <h2>It's me, Sharon Chen</h2>
+      <p>Current Form: Developer</p>
+      <p>Past Iterations: Pharmacist, Calligrapher<p>
+      <p>Loves: picnics, planning holiday itineraries, learning instruments and languages and board game nights</p>
+      <p>I am also going through a pink phase.
+      Don’t judge me.</p>
+    </article>
+    <div class="test">
+      <img src="/images/headshot.jpg" width="200px">
+      <p class="figure-text">Fig 1. A wild Sharon in her natural habitat</p>
+    </div>
   </section>
+<a name="projects"></a>
 
 <div class="parallax2">
 </div>
-<a name="projects"></a>
   <section class="projects">
     <article>
       <h1>Pusheen Pizza</h1>
@@ -87,21 +87,35 @@
       <p>Extra features included reporting availability of bacon blankets.</p>
     </article>
   </section>
+  <a name="thoughts"></a>
   <div class="parallax3">
   </div>
-  <section class=musings>
+
+  <section class=thoughts>
+
     <article>
-      <h1>Blog posts</h1>
-        <p>Coder Factory Academy</p>
-        <p>Ada Lovelace Day</p>
+      <h2>Blog posts</h2>
+      <br>
+        <img src="/images/blogpost.jpg">
+        <h1>Coder Factory Academy Blog</h1>
+        <a href="https://www.coderfactoryacademy.edu.au/posts/women-in-tech-celebrating-ada-lovelace-day" class="link" target="_blank">Ada Lovelace Day</a>
+      <br>
   </section>
-<br>
+<div class="parallax1">
+</div>
   <section class=contact>
+    <a name="contact"></a>
     <img src="/images/letstalk.svg" class="letstalk">
     <p>email: sharon.codes@gmail.com</p>
-    <p>twitter: cloudilicious_</p>
-    <p>instagram: @sharon.codes</p>
-    <p>github: </p>
+    <p>twitter:
+      <a href="https://twitter.com/cloudilicious_" class="link" target="_blank">cloudilicious_</a>
+    </p>
+    <p>instagram:
+      <a href="https://www.instagram.com/sharon.codes/" class="link" target="_blank">@sharon.codes</a>
+    </p>
+    <p>github:
+      <a href="https://github.com/Cloudilicious" class="link" target="_blank">Cloudilicious</a>
+    </p>
   </section>
 
   <div class="parallax1">
