--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <br>
     <article>
       <h1>Beds for Gudetama</h1>
-      <img src="/images/gudetama pink.jpeg" width="200px">
+      <img src="/images/gudetama-pink.jpeg" width="200px">
       <p>This app allows Egg Yolks to search for a suitable Egg White accommodation anywhere in the world!</p>
       <p>Extra features included reporting availability of bacon blankets.</p>
     </article>
