--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sharon's Portfolio Site</title>
     <meta name="viewport" content = "width=device-width, initial-scale=1.0">
+
+    <title>Sharon Chen | Front End Web Developer | Portfolio Website</title>
+    <meta name="description" content="Sharon Chen | Front End Web Developer | Portfolio Website" />
+    <meta name="keywords" content="portfolio, design, developer, front end, woman in tech" />
+    <meta name="author" content="Sharon Chen">
+
+    <!-- Title as used when sharing your page on a social media network such as Facebook -->
+    <meta property="og:title" content="Sharon Chen | Portfolio">
+    <!-- The type of content on this page -->
+    <meta property="og:type" content="website">
+    <!-- Description for social media -->
+    <meta property="og:description" content="Portfolio website of Sharon Chen, front end developer and pizza enthusiast">
+    <!-- Hero image for social media -->
+    <meta property="og:image" content="https://cloudilicious.github.io/images/headshot.jpg">
+
     <meta http-equiv="X-UA-Compatible">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Inconsolata|Muli|Raleway|IM+Fell+Great+Primer:400i" rel="stylesheet">
