update image type

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
   <section class="hello">
     <article>
-      <h2>It's me, Sharon Chen</h2>
+      <h2>It's me, Sharon</h2>
+      <p>Full name: Sharon Chen</p>
       <p>Current Form: Developer</p>
       <p>Past Iterations: Pharmacist, Calligrapher<p>
       <p>Loves: picnics, planning holiday itineraries, learning instruments and languages and board game nights</p>
