update index.html and styles.css for Sharon logo header

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
   <body>
 
+  <figure class="name">
+    <img src="/images/sharon.svg" width=150px>
+  </figure>
+
   <div class="sakura">
   </div>
 
