--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
   <figure class="name">
-    <img src="/images/sharon.svg" width=150px>
+    <img src="/images/Sharon.svg" width=150px>
   </figure>
 
   <div class="sakura">
