--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <article>
       <h2>It's me, Sharon</h2>
       <p>Full name: Sharon Chen</p>
-      <p>Current Form: Developer</p>
+      <p>Current Form: Full Stack Developer</p>
       <p>Past Iterations: Pharmacist, Calligrapher<p>
       <p>Loves: picnics, planning holiday itineraries, learning instruments and languages and board game nights</p>
       <p>I am also going through a pink phase.
