--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta http-equiv="X-UA-Compatible">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Inconsolata|Muli|Raleway|IM+Fell+Great+Primer:400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Inconsolata|Muli|Raleway|IM+Fell+Great+Primer:400i|Source+Code+Pro:300" rel="stylesheet">
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
 
