update index.html and css

--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
   <section class=contact>
     <a name="contact"></a>
     <img src="/images/letstalk.svg" class="letstalk">
+    <p>
+      <a href="https://www.linkedin.com/in/sharon-chen-10717820?trk=nav_responsive_tab_profile_pic" class="link" target="_blank">LinkedIn</a>
+    </p>
     <p>email: sharon.codes@gmail.com</p>
+
     <p>twitter:
       <a href="https://twitter.com/cloudilicious_" class="link" target="_blank">cloudilicious_</a>
     </p>
@@ -139,5 +143,9 @@
 
   <div class="parallax1">
   </div>
+
+  <footer>
+    <p>Created by Sharon Chen 2016</p>
+  </footer>
 
   </body>
