--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   <div class="parallax1">
   </div>
 
-  <footer>
+  <!-- <footer>
     <p>Created by Sharon Chen 2016</p>
-  </footer>
+  </footer> -->
 
   </body>
